--- a/css/Alta.css
+++ b/css/Alta.css
@@ -1,6 +1,6 @@
  body {
      font-family: Arial, sans-serif;
-     background-color: #f2f2f2;
+     background-color: #c79d5a;
      margin: 0;
      padding: 20px;
  }
@@ -14,7 +14,7 @@
      max-width: 400px;
      margin: 20px auto;
      padding: 20px;
-     background-color: #fff;
+     background-color: #e8dbc5;
      border-radius: 5px;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  }
