--- a/css/index.css
+++ b/css/index.css
@@ -55,3 +55,42 @@ h1{
 p{
     color: black;
 }
+
+.menu-container {
+    display: flex;
+    justify-content: space-between;
+    background-color: #666;
+    color: #fff;
+    padding: 1em;
+}
+
+.menu-container .left-menu a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5em 1em;
+    margin: 0 1em;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.menu-container .left-menu a:hover {
+    background-color: #444;
+}
+
+.menu-container .right-menu {
+    display: flex;
+    align-items: center;
+}
+
+.menu-container .right-menu a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5em 1em;
+    margin: 0 1em;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.menu-container .right-menu a:hover {
+    background-color: #444;
+}
