--- a/css/index.css
+++ b/css/index.css
@@ -65,6 +65,7 @@ p{
 }
 
 .menu-container .left-menu a {
+    padding-top: 10px;
     color: #fff;
     text-decoration: none;
     padding: 0.5em 1em;
