--- a/css/Productos.css
+++ b/css/Productos.css
@@ -1,51 +1,60 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  font-family: 'Arial', sans-serif;
+  background-color: #c79d5a;
   margin: 0;
-  padding: 20px;
 }
 
-h1 {
+.catalogo-container {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.producto {
+  border: 1px solid #ddd;
+  padding: 15px;
+  margin-bottom: 20px;
+  text-align: center;
+  background-color: #fff;
+}
+
+.producto h3 {
+  color: #333;
+}
+
+.producto p {
+  color: #666;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  margin-bottom: 5px;
+}
+
+input {
+  padding: 8px;
+  margin-bottom: 10px;
+  width: 80px;
   text-align: center;
 }
 
-.product-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.product {
-  width: 300px;
-  background-color: #fff;
-  border-radius: 5px;
-  padding: 20px;
-  margin: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  box-sizing: border-box;
-}
-
-.product img {
-  width: 100%;
-  border-radius: 5px;
-}
-
-.product h2 {
-  margin-top: 10px;
-  font-size: 18px;
-}
-
-.product p {
-  margin-top: 5px;
-  font-size: 14px;
-}
-
 button {
-  width: 100%;
-  padding: 10px;
   background-color: #CE967B;
   color: #fff;
+  color: white;
+  padding: 10px 15px;
   border: none;
-  border-radius: 3px;
   cursor: pointer;
+}
+
+button:hover {
+  background-color: #d6b482;
+  color: black;
 }
